@@ -1,0 +1,2 @@
+@comment $NetBSD: PLIST,v 1.1 2020/05/13 01:04:20 tnn Exp $
+bin/bbk_cli
