@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2020/05/13 01:04:20 tnn Exp $
+
+SHA1 (bbk-7b810a696c78b746185c11282bdbe3fb7f8c5d4b-7b810a696c78b746185c11282bdbe3fb7f8c5d4b.tar.gz) = f63dc97236ce02bb1fc40688a27940c0e5f7be72
+RMD160 (bbk-7b810a696c78b746185c11282bdbe3fb7f8c5d4b-7b810a696c78b746185c11282bdbe3fb7f8c5d4b.tar.gz) = 792811331b8b71803d38026211e0b0c8307c2ef9
+SHA512 (bbk-7b810a696c78b746185c11282bdbe3fb7f8c5d4b-7b810a696c78b746185c11282bdbe3fb7f8c5d4b.tar.gz) = e1abf975620fe9dcfedaec41788fe4d06634471f7d7a26eeed52b880488a76065ca96fa6d2b29a8019e15053179552458f1cb893e37a56164861548290123dc2
+Size (bbk-7b810a696c78b746185c11282bdbe3fb7f8c5d4b-7b810a696c78b746185c11282bdbe3fb7f8c5d4b.tar.gz) = 133961 bytes
